# terraform-aws-test-infrastructure

./: .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  README.md  aws.env  import_data.sh  pyproject.toml  terraform_deploy.sh
.github/: dependabot.yml
.github/workflows/: linting.yml  main.yml  terraform.yml  tf-deploy.yml  tf-destroy.yml  tfsec.yml
terraform/src/: .terraform.lock.hcl  alb.tf  asg.tf  backend.hcl  buckets.tf  ecs.tf  iam.tf  import_data.sh  instances.tf  lambdas.tf  main.tf  network_interfaces.tf  policies.tf  rds.tf  security_groups.tf  sqs.tf  subnets.tf  terraform.plan  test_data.csv  variables.tf
terraform/src/lambdas/: create_table.py  data.sql  load_data.sh  message_consumer.py  tets.sh
terraform/src/log_events/: log_events.py
terraform/src/sqs_polling/: sqs_polling.py
