[tool.poetry]
name = "terraform-test-infra"
version = "0.1.0"
description = ""
authors = ["Kristina Pianykh <kristinavrnrus@gmail.com>"]
readme = "README.md"
packages = [{include = "terraform_test_infra"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.1.1"
s3cmd = "^2.3.0"
boto3 = "^1.26.90"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
