[tool.poetry]
name = "terraform-test-infra"
version = "0.1.0"
description = ""
authors = ["Kristina Pianykh <kristinavrnrus@gmail.com>"]
readme = "README.md"
packages = [{include = "terraform_test_infra"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.3.1"
s3cmd = "^2.3.0"
boto3 = "^1.28.1"
pymysql = "^1.0.3"


[tool.poetry.group.lambda.dependencies]
mysql-connector-python = "^8.0.33"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
